--- a/Transformers 1.0 Web App/templates/scoring.html
+++ b/Transformers 1.0 Web App/templates/scoring.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <form name="scoreform" action="/result" method="POST" >
+                    <form id="scoreform" name="scoreform" action="/result" method="POST" >
                         <div class="progress-table-wrap">
                             <div class="progress-table">
                                 <div class="table-head">
@@ -128,8 +128,8 @@
                                         <div class="answer">{{ jawaban_labeled[num] }}</div>
                                         <div class="score">
                                             <input style="background: #fff;text-align:center;width:80%" type="number" name="jawaban_{{ num }}" placeholder="Add score..."
-                                            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Add score...'" required
-                                            class="single-input">
+                                            onfocus="this.placeholder = ''" onblur="this.placeholder = 'Add score...'"
+                                            class="single-input" required>
                                         </div>
                                     </div>
                                 {% endfor %}
@@ -138,7 +138,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-7 col-lg-8">
                                 <div class="section-tittle text-center mt-40">
-                                    <input type="submit" style="display:none" id="submit" onclick="return checkscores();">
+                                    <input type="submit" style="display:none" id="submit" onclick="return checkscores()">
                                     <a href="#" class="btn hero-btn" style = "padding: 30px 50px !important" onclick="document.getElementById('submit').click()">Score My Answers &#8594</a>
                                 </div>
                             </div>
@@ -151,12 +151,12 @@
     </main>
     
     <script>
-        function checkscore() {
-            var inputs = $(".single-input");
-            for (var i = 0; i < inputs.length; i++) {
-              if ($(inputs[i]).val().length == 0) {
-                alert ("Please Fill The Score!");
-                return (false);
+        function checkscores() {
+            var form = document.getElementById('scoreform');
+            for(var i=0; i < form.elements.length; i++){
+              if(form.elements[i].value === '' && form.elements[i].hasAttribute('required')){
+                alert('Please Fill All The Scores!');
+                return false;
               }
             }
             showloader();
